--- a/index.html
+++ b/index.html
@@ -13,29 +13,32 @@
 
 <body>
     <div class="wrapper">
-    <!-- landing page. Heading large, description of challenge. Top left - button to view high scores. Top right - countdown timer big button to start quiz-->
-    <header>
-        <a href="" id="highScoresButton">High Scores</a>
-        <p id="timeLeft">Time:</p>
-        <h1 id="landingHeader">Coding Quiz</h1>
+        <!-- landing page. Heading large, description of challenge. Top left - button to view high scores. Top right - countdown timer big button to start quiz-->
+        <header>
+            <a href="" id="highScoresButton">High Scores</a>
+            <p id="timeLeft">Time:</p>
+            <h1 id="landingHeader">Coding Quiz</h1>
 
-    </header>
-<br>
-<div id="textBlock">
-    <p>
-        This quiz will test your knowledge on coding to an extent to which you have never before been subject! Unless,
-        maybe, you've previously done a quiz on coding.
-    </p>
-    <p>
-        The format is simple. A question will appear on the screen, and you will be offered four different options, only <em>one</em> of which is correct. Choose wisely, for while a correct answer will raise your score, an erroenous response will REMOVE 15 SECONDS FROM YOUR AVAILABLE TIME!
-    </p>
-    <button id="startButton">Dare you?</button>
-</div>
+        </header>
+        <br>
+        <div id="textBlock">
+            <p>
+                This quiz will test your knowledge on coding to an extent to which you have never before been subject!
+                Unless,
+                maybe, you've previously done a quiz on coding.
+            </p>
+            <p>
+                The format is simple. A question will appear on the screen, and you will be offered four different
+                options, only <em>one</em> of which is correct. Choose wisely, for while a correct answer will raise
+                your score, an erroenous response will REMOVE 15 SECONDS FROM YOUR AVAILABLE TIME!
+            </p>
+            <button id="startButton">Dare you?</button>
+        </div>
 
-    <!-- on clicking start quiz: quiz title minimised to be less obvious. Start countdown timer. Start quiz  -->
+        <!-- on clicking start quiz: quiz title minimised to be less obvious. Start countdown timer. Start quiz  -->
 
-    <!-- question, followed by four clickable answers. 2x2 on large screens, vertical on small ones. Can the order of the answers be randomised? On the correct click, points go up, on incorrect click time is deducted. New question served -->
+        <!-- question, followed by four clickable answers. 2x2 on large screens, vertical on small ones. Can the order of the answers be randomised? On the correct click, points go up, on incorrect click time is deducted. New question served -->
 
-    <!-- when no more questions, or no more time, quiz ends. Display final score, ask for initial, save initials and final score to local storage. Upon storing, return to landing page -->
-</div>
+        <!-- when no more questions, or no more time, quiz ends. Display final score, ask for initial, save initials and final score to local storage. Upon storing, return to landing page -->
+    </div>
 </body>
