moved files into appropriate folders

--- a/index.html
+++ b/index.html
@@ -4,10 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Code Quiz</title>
-    <script type="text/javascript" src="script.js"></script>
-    <script type="text/javascript" src="questions.js"></script>
+
     <!-- <link rel="stylesheet" type="text/css" href="reset.css"> -->
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
 
 </head>
 
@@ -41,4 +40,8 @@
 
         <!-- when no more questions, or no more time, quiz ends. Display final score, ask for initial, save initials and final score to local storage. Upon storing, return to landing page -->
     </div>
+
 </body>
+
+<script type="text/javascript" src="js/script.js"></script>
+<script type="text/javascript" src="js/questions.js"></script>
