fixed the countdown timer

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <!-- landing page. Heading large, description of challenge. Top left - button to view high scores. Top right - countdown timer big button to start quiz-->
         <header>
             <a href="" id="highScoresButton">High Scores</a>
-            <p id="timeLeft">Time:</p>
+            <p id="timeLeft">Time Left: 75</p>
             <h1 id="landingHeader">Coding Quiz</h1>
 
         </header>
